public_instance.tf
resource "aws_instance" "example" {
  ami           = "ami-00c90dbdc12232b58"
  instance_type = "t2.micro"
  # the VPC subnet
  subnet_id = aws_subnet.main-public-1.id
  # the security group
  vpc_security_group_ids = [aws_security_group.allow-ssh.id]
  # the public SSH key
  key_name = var.key_name
  tags = {
    Name = "mouli-ec2"
  }
}
